#7339 bug: fixes broken css variables after preserve: true

--- a/src/assets/styles/10-settings/_grid.scss
+++ b/src/assets/styles/10-settings/_grid.scss
@@ -10,7 +10,7 @@
 // TODO: #5906 discuss approach to grid/layout overall
 
 :root {
-  --grid-max-width: 1344;
+  --grid-max-width: calc(1344 * var(--text-base-size-px)); // calc rems
 }
 
 // 8px spacing unit based on (16px / 2)
