--- a/src/assets/styles/20-tools/_mixins/_grid.scss
+++ b/src/assets/styles/20-tools/_mixins/_grid.scss
@@ -14,7 +14,7 @@
 @mixin grid-container {
   margin-left: 5%;
   margin-right: 5%;
-  max-width: rem(var(--grid-max-width));
+  max-width: var(--grid-max-width);
 
   @include mq(xxl) {
     margin-left: auto;
